// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Preferences /> render() should render correctly 1`] = `
<div>
  <div>
    <WithStyles(GridContainer)
      direction="column"
      spacing={1}
    >
      renderBreadcrumbs
      <WithStyles(GridItem)>
        <Switch>
          <Route
            path="undefined/reminders"
            render={[Function]}
          />
          <Route
            path="*"
            render={[Function]}
          />
        </Switch>
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </div>
</div>
`;

exports[`<Preferences /> renderBreadcrumbs() should renderBreadcrumbs 1`] = `
<div>
  <WithStyles(GridItem)>
    <WithStyles(GridContainer)
      alignItems="center"
      spacing={1}
      wrap="nowrap"
    >
      <WithStyles(GridItem)>
        <WithStyles(JButton)
          onClick={[Function]}
        >
          <WithStyles(Icon)
            icon="lnr-arrow-left"
            size="normal"
          />
        </WithStyles(JButton)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem)>
        <WithStyles(JTextClass)
          dark={true}
          xl={true}
        />
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
</div>
`;

exports[`<Preferences /> renderListItem() should renderListItem 1`] = `
<div>
  <WithStyles(ForwardRef(ListItem))
    button={false}
    divider={true}
    onClick={[Function]}
  >
    <WithStyles(GridContainer)
      direction="column"
      spacing={1}
    >
      <WithStyles(GridItem)>
        <WithStyles(GridContainer)
          alignItems="center"
          wrap="nowrap"
        >
          <WithStyles(GridItem)>
            <WithStyles(GridContainer)
              direction="row"
              spacing={0}
            />
          </WithStyles(GridItem)>
          <WithStyles(GridItem)>
            <WithStyles(Icon)
              icon="lnr-chevron-right"
              size="normal"
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(ForwardRef(ListItem))>
</div>
`;

exports[`<Preferences /> renderListItem() should renderListItem with data 1`] = `
<div>
  <WithStyles(ForwardRef(ListItem))
    button={true}
    divider={false}
    onClick={[Function]}
  >
    <WithStyles(GridContainer)
      direction="column"
      spacing={1}
    >
      <WithStyles(GridItem)>
        <WithStyles(GridContainer)
          alignItems="center"
          wrap="nowrap"
        >
          <WithStyles(GridItem)>
            <WithStyles(GridContainer)
              direction="row"
              spacing={0}
            >
              <WithStyles(GridItem)
                className=""
              >
                <WithStyles(JTextClass)
                  bold={true}
                  gray={true}
                  sm={true}
                  uppercase={true}
                >
                  heading
                </WithStyles(JTextClass)>
              </WithStyles(GridItem)>
              <WithStyles(GridItem)
                xs={true}
              >
                content
              </WithStyles(GridItem)>
            </WithStyles(GridContainer)>
          </WithStyles(GridItem)>
          <WithStyles(GridItem)>
            extras
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem)>
        body
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(ForwardRef(ListItem))>
</div>
`;
